Улучшение кода по Sonar