@@ -1,5 +1,7 @@
 package org.example.mrdverkin.services;
 
+import jakarta.persistence.EntityNotFoundException;
+import lombok.AllArgsConstructor;
 import org.example.mrdverkin.dataBase.Entitys.Order;
 import org.example.mrdverkin.dataBase.Entitys.Report;
 import org.example.mrdverkin.dataBase.Entitys.User;
@@ -10,27 +12,21 @@ import org.example.mrdverkin.dto.ReportDTO;
 
 import org.example.mrdverkin.dto.ResponceDTO;
 import org.example.mrdverkin.reportCreators.ExcelCreater;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Service
+@AllArgsConstructor
 public class ReportService {
 
-    @Autowired
-    private ReportRepository reportRepository;
-    @Autowired
-    private UserRepository userRepository;
-    @Autowired
-    private OrderRepository orderRepository;
-    @Autowired
-    private ExcelCreater excelCreater;
+    private final ReportRepository reportRepository;
+    private final UserRepository userRepository;
+    private final OrderRepository orderRepository;
+    private final ExcelCreater excelCreater;
 
     /**
      * Метод для генирации отчёта
@@ -40,13 +36,12 @@ public class ReportService {
      */
     public ResponceDTO createReport(ReportDTO reportRequest, User owner) {
         ResponceDTO responceDTO = new ResponceDTO();
-        User updateOwner = userRepository.findByNickname(owner.getNickname()).get();
+        User updateOwner = userRepository.findByNickname(owner.getNickname())
+                .orElseThrow(EntityNotFoundException::new);
 
         Report report = new Report();
-        StringBuilder stringBuilder = new StringBuilder();
-        stringBuilder.append(reportRequest.getTitle()).append(owner.getNickname());
 
-        report.setTitle(stringBuilder.toString());
+        report.setTitle(reportRequest.getTitle() + owner.getNickname());
 
         report.setDateFrom(reportRequest.getDateFrom());
         report.setDateTo(reportRequest.getDateTo());
@@ -56,7 +51,7 @@ public class ReportService {
         //добавляем данные о магазинах
         List<User> users = new ArrayList<>();
         for (String relatedUsers: reportRequest.getRelatedUsers()) {
-           users.add(userRepository.findByNickname(relatedUsers).get());
+           users.add(userRepository.findByNickname(relatedUsers).orElseThrow(EntityNotFoundException::new));
         }
         report.setRelatedUsers(users);
 
@@ -65,7 +60,6 @@ public class ReportService {
 
         //добавляем заказы
         List<Order> orders =orderRepository.findOrdersByNicknamesAndDateRange(dateFrom, dateTo,reportRequest.getRelatedUsers());
-        System.out.println(orders.size());
         report.setOrders(orders);
 
         //сейвим отчёт
@@ -88,7 +82,7 @@ public class ReportService {
      */
     public List<ReportDTO> getAllReportByUser(User user) {
         List<Report> results = reportRepository.findAllByOwner(user.getId());
-        List<ReportDTO> reportDTOS = results.stream()
+        return results.stream()
                 .map(r -> new ReportDTO(
                         r.getId(),
                         r.getTitle(),
@@ -96,13 +90,11 @@ public class ReportService {
                         r.getDateTo(),
                         r.getRelatedUsers().stream()
                                 .map(User::getNickname)
-                                .collect(Collectors.toList()),
+                                .toList(),
                         r.getDateCreated(),
                         null
                 ))
-                .collect(Collectors.toList());
-
-        return reportDTOS;
+                .toList();
     }
 
     public byte[] downloadReport(ReportDTO reportDTO) {
@@ -110,7 +102,7 @@ public class ReportService {
     }
 
     public ReportDTO getReportById(Long id) {
-        ReportDTO report = reportRepository.findByIdWithOrders(id)
+        return reportRepository.findByIdWithOrders(id)
                 .map(r -> new ReportDTO(
                         r.getId(),
                         r.getTitle(),
@@ -118,10 +110,9 @@ public class ReportService {
                         r.getDateTo(),
                         r.getRelatedUsers().stream()
                                 .map(User::getNickname)
-                                .collect(Collectors.toList()),
+                                .toList(),
                         r.getDateCreated(),
                         r.getOrders()
                 )).orElse(null);
-        return report;
     }
 }
